--- a/app/views/knowhows/show.html.erb
+++ b/app/views/knowhows/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Knowhows#show</h1>
-<p>Find me in app/views/knowhows/show.html.erb</p>
+<p><strong>タイトル:</strong> <%= @knowhow_post.title %></p>
+<p><strong>内容:</strong> <%= @knowhow_post.content %></p>
+<p><strong>投稿者:</strong> <%= @knowhow_post.user.nick_name %></p>
