--- a/app/views/knowhow_posts/index.html.erb
+++ b/app/views/knowhow_posts/index.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
+<h1>ノウハウ一覧</h1>
 
-<h1>Knowhow posts</h1>
+<%= link_to "新規投稿", new_knowhow_post_path, class: "btn btn-primary" %>
 
-<div id="knowhow_posts">
-  <% @knowhow_posts.each do |knowhow_post| %>
-    <%= render knowhow_post %>
-    <p>
-      <%= link_to "Show this knowhow post", knowhow_post %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New knowhow post", new_knowhow_post_path %>
+<table>
+  <thead>
+    <tr>
+      <th>タイトル</th>
+      <th>作成者</th>
+      <th>作成日</th>
+      <th>操作</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @knowhow_posts.each do |post| %>
+      <tr>
+        <td><%= link_to post.title, knowhow_post_path(post) %></td>
+        <td><%= post.user.nick_name %></td>
+        <td><%= post.created_at.strftime("%Y年%m月%d日") %></td>
+        <td>
+          <% if post.user == current_user || current_user.admin? %>
+            <%= link_to '編集', edit_knowhow_post_path(post) %> |
+            <%= link_to '削除', knowhow_post_path(post), method: :delete, data: { confirm: '本当に削除しますか？' } %>
+          <% else %>
+            閲覧のみ
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
