--- a/app/views/knowhow_posts/index.html.erb
+++ b/app/views/knowhow_posts/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>画像</th>
       <th>タイトル</th>
       <th>作成者</th>
       <th>作成日</th>
@@ -14,11 +15,15 @@
   <tbody>
     <% @knowhow_posts.each do |post| %>
       <tr>
-        <td><%= link_to post.title, knowhow_post_path(post) %></td>
         <td>
-          <%= post.user.nick_name %><br>
-          <small>(<%= post.user.company.name %>)</small>
+          <% if post.image.attached? %>
+            <%= image_tag post.image.variant(resize_to_limit: [100, 100]) %>
+          <% else %>
+            -
+          <% end %>
         </td>
+        <td><%= link_to post.title, knowhow_post_path(post) %></td>
+        <td><%= post.user.nick_name %></td>
         <td><%= post.created_at.strftime("%Y年%m月%d日") %></td>
         <td>
           <% if post.user == current_user || current_user.admin? %>
