トップページへ戻る

--- a/app/views/knowhow_posts/index.html.erb
+++ b/app/views/knowhow_posts/index.html.erb
@@ -1,5 +1,6 @@
 <h1>ノウハウ一覧</h1>
 
+<%= link_to "トップページへ戻る", root_path, class: "btn btn-secondary" %><br><br>
 <%= link_to "新規投稿", new_knowhow_post_path, class: "btn btn-primary" %>
 
 <table>
