--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Quizzes#index</h1>
-<p>Find me in app/views/quizzes/index.html.erb</p>
+<h1>クイズ一覧</h1>
+
+<%= link_to "新規クイズ投稿", new_quiz_path, class: "btn btn-primary" %>
+
+<table>
+  <thead>
+    <tr>
+      <th>問題文</th>
+      <th>投稿者</th>
+      <th>投稿日</th>
+      <th>操作</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @quizzes.each do |quiz| %>
+      <tr>
+        <td><%= truncate(quiz.question, length: 50) %></td>
+        <td><%= quiz.user.nick_name %></td>
+        <td><%= quiz.created_at.strftime("%Y年%m月%d日") %></td>
+        <td>
+          <%= link_to "詳細", quiz_path(quiz), class: "btn btn-sm btn-outline-info" %>
+          <% if quiz.user == current_user || current_user.admin? %>
+            <%= link_to "編集", edit_quiz_path(quiz), class: "btn btn-sm btn-outline-warning" %>
+            <%= link_to "削除", quiz_path(quiz), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-sm btn-outline-danger" %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
