--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -31,3 +31,22 @@
   <%= link_to "編集", edit_quiz_path(@quiz), class: "btn btn-primary" %>
   <%= link_to "削除", quiz_path(@quiz), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %>
 <% end %>
+
+<h2>回答する</h2>
+<%= form_with(model: [@quiz, Answer.new], local: true) do |form| %>
+  <div>
+    <%= form.label :content, "あなたの回答" %><br>
+    <%= form.text_area :content %>
+  </div>
+  <div>
+    <%= form.submit "回答を送信" %>
+  </div>
+<% end %>
+
+<h2>みんなの回答</h2>
+<% @quiz.answers.each do |answer| %>
+  <div>
+    <strong><%= answer.user.nick_name %></strong>：
+    <%= simple_format(answer.content) %>
+  </div>
+<% end %>
