--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -28,6 +28,11 @@
   </div>
 
   <div>
+    <%= form.label :image, "画像（任意）" %>
+    <%= form.file_field :image %>
+  </div>
+
+  <div>
     <%= form.submit "投稿する", class: "btn btn-primary" %>
   </div>
 <% end %>
